# llama-gguf-optimize

./: .gitattributes  .gitignore  README.md  USAGE.md  bub_execution_flow.md  compare_logits_execution_flow.md  compare_logits_specification.md  imatrix_dataset.ipynb  on_kl-divergence-optimization.md  on_perplexity.md  on_quantization.md  pyproject.toml  quantizations.yaml  quantize.ipynb  requirements.txt
assets/: usage-guide.notebooklm.webm
src/: __init__.py  best_bub.py  compare_logits.py  generate_logits.py  gguf_optimize_logging.py  gguf_optimize_model_fns.py  imatrix_dataset.ipynb  imatrix_dataset.py  kl_d_bench.py  library.py  quantize.py
src/extras/: analyze_comparison_progress_from_logs.py  append_overall.py  check_logits.py  composite_comparsion.py  read_kl_d_benchmarks.py  reshape_logits.py  unfree.py  visualize_results.py
src/imatrix_dataset/: local_shuffle_plugin.py  oscar_plugin.py  plugin_base.py
src/llama_gguf_optimize/: __init__.py
src/tests/: mock_model.py  test_best_bub.py  test_compare_logits.py  test_generate_logits.py  test_kl_d_bench.py  test_model_fns.py
